be/src/runtime/io/cache-reader-test-stub.h
@@ -42,7 +42,8 @@ public:
   }
 
   virtual Status ReadFromPos(DiskQueue* queue, int64_t file_offset, uint8_t* buffer,
-      int64_t bytes_to_read, int64_t* bytes_read, bool* eof) override {
+      int64_t bytes_to_read, int64_t* bytes_read, bool* eof,
+      bool use_file_handle_cache) override {
     DCHECK(false);
     return Status("Not implemented");
   }
