be/src/runtime/io/hdfs-file-reader.cc
@@ -65,6 +65,15 @@ Status HdfsFileReader::Open(bool use_file_handle_cache) {
   // If using file handle caching, the reader does not maintain its own
   // hdfs file handle, so it can skip opening a file handle.
   if (use_file_handle_cache) return Status::OK();
+  if (scan_range_->UseDataCache() &&
+      scan_range_->io_mgr_->remote_data_cache() != nullptr) {
+    // Use delayed open when using a remote data cache.
+    return Status::OK();
+  }
+  return DoOpen();
+}
+
+Status HdfsFileReader::DoOpen() {
   auto io_mgr = scan_range_->io_mgr_;
   // Get a new exclusive file handle.
   RETURN_IF_ERROR(io_mgr->GetExclusiveHdfsFileHandle(hdfs_fs_,
@@ -106,7 +115,7 @@ std::string HdfsFileReader::GetHostList(int64_t file_offset,
 }
 
 Status HdfsFileReader::ReadFromPos(DiskQueue* queue, int64_t file_offset, uint8_t* buffer,
-    int64_t bytes_to_read, int64_t* bytes_read, bool* eof) {
+    int64_t bytes_to_read, int64_t* bytes_read, bool* eof, bool use_file_handle_cache) {
   DCHECK(scan_range_->read_in_flight());
   DCHECK_GE(bytes_to_read, 0);
   // Delay before acquiring the lock, to allow triggering IMPALA-6587 race.
@@ -156,10 +165,13 @@ Status HdfsFileReader::ReadFromPos(DiskQueue* queue, int64_t file_offset, uint8_
     hdfsFile hdfs_file;
     if (exclusive_hdfs_fh_ != nullptr) {
       hdfs_file = exclusive_hdfs_fh_->file();
-    } else {
+    } else if (use_file_handle_cache) {
       RETURN_IF_ERROR(io_mgr->GetCachedHdfsFileHandle(hdfs_fs_,
           scan_range_->file_string(), scan_range_->mtime(), request_context, &accessor));
       hdfs_file = accessor.Get()->file();
+    } else {
+      RETURN_IF_ERROR(DoOpen());
+      hdfs_file = exclusive_hdfs_fh_->file();
     }
     req_context_read_timer.Start();
 
