be/src/runtime/io/local-file-reader.h
@@ -31,7 +31,8 @@ class LocalFileReader : public FileReader {
 
   virtual Status Open(bool use_file_handle_cache) override;
   virtual Status ReadFromPos(DiskQueue* disk_queue, int64_t file_offset, uint8_t* buffer,
-      int64_t bytes_to_read, int64_t* bytes_read, bool* eof) override;
+      int64_t bytes_to_read, int64_t* bytes_read, bool* eof,
+      bool use_file_handle_cache) override;
   /// We don't cache files of the local file system.
   virtual void CachedFile(uint8_t** data, int64_t* length) override;
   virtual void Close() override;
